make code more readable

--- a/GMoney/MCMC.ipynb
+++ b/GMoney/MCMC.ipynb
@@ -246,8 +246,138 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "* High variance implies that the estimator is less reliable as the outcomes are more dispersed\n",
+    "* Low variance makes the estimator more reliable and narrows the confidence intervals, increasing trust in the estimate, if the variance is large\n"
+   ],
+   "id": "85fe5f85b14abd0f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Valuation by Simulation\n",
+    "\n",
+    "The risk-neutral pricing methodology tells us that:\n",
+    "- value of an option = risk-neutral expectation of its discounted payoff\n",
+    "\n",
+    "We can estimate this expectation by computing the average of a large number of discounted payoffs. For a particular simulation $i$:\n",
+    "\n",
+    "$\\Large C_{0,i} = \\exp (-\\int^{T}_{0}r_s ds) C_{T,i} = \\exp (-rT) C_{T,i}$\n",
+    "\n",
+    "Now if we repeat the simulation $M$ times, we can average the outcomes.\n",
+    "$\\Large \\hat{C_0} = \\frac{1}{M}\\sum^{M}_{i=1} C_{0,i}$\n",
+    "\n",
+    "### Standard Error $SE(\\hat{C_0})$\n",
+    "\n",
+    "$\\hat{C_0}$ is an estimate of the true value of the option $C_0$ with error due to the fact we are taking an average of randomly generated samples, and so therefore the calculation is itself random. A measure of this error is the standard deviation of $\\hat{C_0}$ called the standard error. This can be estimated as the standard deviation of $C_{0,i}$ divided by the number of samples $M$.\n",
+    "\n",
+    "$\\Large SE(\\hat{C_0}) = \\frac{\\sigma(C_{0,i}) }{\\sqrt{M}}$\n",
+    "\n",
+    "$\\Large \\sigma(C_{0,i}) = \\sqrt{ \\frac{1}{M-1} \\sum^{M}_{i=1} (C_{0,i} - \\hat{C_0})^2 } $\n",
     "\n",
     "\n",
+    "Here we have constant interest rate so the discount factor is $\\exp(-rT)$, and the stock dynamics are modelled with Geometric Brownian Motion (GBM).\n",
+    "\n",
+    "$\\large dS_t = rS_tdt+\\sigma S_tdW_t$\n",
+    "\n",
+    "Let's simulate this GBM process by simulating variables of the natural logarithm process of the stock price $x_t = ln(S_t)$, which is normally distributed. For the dynamics of the natural logarithm process of stock prices under GBM model you need to use Ito's calculus. Please watch the video on my YouTube channell 'Stochastic Calculus for Quants | Understanding Geometric Brownian Motion using Itô Calculus' if you would like to understand why the SDE changes in this case.\n",
+    "\n",
+    "$\\large dx_t = \\nu dt+\\sigma dz_t ,  \\nu = r - \\frac{1}{2} \\sigma ^ 2$\n",
+    "\n",
+    "We can then discretize the Stochastic Differential Equation (SDE) by changing the infinitesimals $dx, dt, dz$ into small steps $\\Delta x, \\Delta t, \\Delta z$.\n",
+    "\n",
+    "$\\large \\Delta x = \\nu  \\Delta t+\\sigma \\Delta z$\n",
+    "\n",
+    "This is the exact solution to the SDE and involves no approximation.\n",
+    "\n",
+    "$\\large x_{t+\\Delta t} = x_{t} + \\nu (\\Delta t)+\\sigma (z_{t+\\Delta t}- z_t)$\n",
+    "\n",
+    "In terms of the stock price S, we have:\n",
+    "\n",
+    "$\\large S_{t+\\Delta t} = S_{t} \\exp( \\nu \\Delta t + \\sigma (z_{t+\\Delta t}- z_t) )$\n",
+    "\n",
+    "Where $(z_{t+\\Delta t}- z_t) \\sim N(0,\\Delta t) \\sim \\sqrt{\\Delta t} N(0,1) \\sim \\sqrt{\\Delta t} \\epsilon_i$"
+   ],
+   "id": "4eae2f3b78e5df7a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T14:46:13.524725Z",
+     "start_time": "2024-12-13T14:46:13.490483Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Option Parameters\n",
+    "initial_stock_price = 101.15    # Current stock price (S)\n",
+    "strike_price = 98.01            # Strike price (K)\n",
+    "volatility = 0.0991             # Volatility (σ)\n",
+    "risk_free_rate = 0.015          # Risk-free rate (r)\n",
+    "num_time_steps = 10             # Number of time steps (N)\n",
+    "num_simulations = 1000          # Number of Monte Carlo simulations (M)\n",
+    "time_to_maturity = 60 / 365     # Time to maturity in years (T)\n",
+    "\n",
+    "# Precompute Constants\n",
+    "time_step = time_to_maturity / num_time_steps          # Length of each time step (Δt)\n",
+    "drift = (risk_free_rate - 0.5 * volatility**2) * time_step  # Drift term (νΔt)\n",
+    "diffusion = volatility * np.sqrt(time_step)           # Diffusion term (σ√Δt)\n",
+    "log_initial_price = np.log(initial_stock_price)       # Logarithm of initial stock price (ln(S))\n",
+    "\n",
+    "# Initialize Accumulators for Payoff and Variance\n",
+    "total_payoff = 0\n",
+    "total_payoff_squared = 0\n",
+    "\n",
+    "# Function to Simulate One Log-Price Path\n",
+    "def simulate_log_price_path(log_price, drift, diffusion, num_steps):\n",
+    "    \"\"\"Simulates the final log price using geometric Brownian motion.\"\"\"\n",
+    "    for _ in range(num_steps):\n",
+    "        random_shock = np.random.normal()\n",
+    "        log_price += drift + diffusion * random_shock\n",
+    "    return log_price\n",
+    "\n",
+    "# Monte Carlo Simulation\n",
+    "for _ in range(num_simulations):\n",
+    "    # Simulate the final log price of the stock\n",
+    "    final_log_price = simulate_log_price_path(log_initial_price, drift, diffusion, num_time_steps)\n",
+    "    final_price = np.exp(final_log_price)  # Convert log price to normal price\n",
+    "\n",
+    "    # Calculate the option payoff\n",
+    "    payoff = max(0, final_price - strike_price)\n",
+    "\n",
+    "    # Accumulate results for mean and variance calculations\n",
+    "    total_payoff += payoff\n",
+    "    total_payoff_squared += payoff**2\n",
+    "\n",
+    "# Compute Option Value and Standard Error\n",
+    "discount_factor = np.exp(-risk_free_rate * time_to_maturity)\n",
+    "option_value = discount_factor * total_payoff / num_simulations  # Present value of expected payoff\n",
+    "variance = (total_payoff_squared - (total_payoff**2) / num_simulations) * discount_factor**2 / (num_simulations - 1)\n",
+    "standard_error = np.sqrt(variance) / np.sqrt(num_simulations)\n",
+    "\n",
+    "# Display Results\n",
+    "print(f\"Call option value: ${option_value:.2f}\")\n",
+    "print(f\"Standard error: +/- ${standard_error:.2f}\")"
+   ],
+   "id": "715fc4c4d7a696a2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Call option value: $4.16\n",
+      "Standard error: +/- $0.11\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## Antithetic Variates\n",
     "\n",
     "Let's write an option on asset $S_1$ and another option on asset $S_2$ that is perfectly negatively correlated with $S_1$ and which currently has the same price. $S_1$ and $S_2$ satisfy the following Stochastic Differential Equations:\n",
@@ -258,7 +388,7 @@
     "\n",
     "Since the price and volatility of the two assets are identical, so is the value of these two options. However, the variance of a portfolio pay-off containing both of these contracts is much less than the variance of the pay-off of each individual contract. In essence we are removing the large spike in probability distribution of a single contract pay-off. i.e. Basic Intuition: when one option pays out, the other does not.\n",
     "\n",
-    "To implement an antithetic variate we create a hypothetical asset which is perfectly negatively correlated with the original asset. Implementation is very simple, and if we consider the example of the European Call Option (as in last weeks video). Our simulated pay-offs are under the following $S_t$ dynamics:\n",
+    "To implement an antithetic variate we create a hypothetical asset which is perfectly negatively correlated with the original asset. Implementation is very simple, and if we consider the example of the European Call Option. Our simulated pay-offs are under the following $S_t$ dynamics:\n",
     "\n",
     "$\\large S_{t+\\Delta t} = S_{t} \\exp( \\nu \\Delta t + \\sigma (z_{t+\\Delta t}- z_t) )$\n",
     "\n",
@@ -268,63 +398,80 @@
     "\n",
     "- $\\large C_{T,i} = max(0, S \\exp( \\nu \\Delta T + \\sigma \\sqrt{T} (\\epsilon_i) ) - K)$\n",
     "\n",
-    "- $\\large \\bar{C}_{T,i} = max(0, S \\exp( \\nu \\Delta T + \\sigma \\sqrt{T} (-\\epsilon_i) ) - K)$"
+    "- $\\large \\bar{C}_{T,i} = max(0, S \\exp( \\nu \\Delta T + \\sigma \\sqrt{T} (-\\epsilon_i) ) - K)$\n",
+    "\n",
+    "Taking the logarithm transforms the dynamics of the wiener process into\n",
+    "$d(\\ln S_t) = \\left(r - \\frac{\\sigma^2}{2}\\right) dt + \\sigma dW_t$\n"
    ],
    "id": "6912b46e7252f030"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T13:45:17.242045Z",
-     "start_time": "2024-12-13T13:45:17.209311Z"
+     "end_time": "2024-12-13T14:46:25.185731Z",
+     "start_time": "2024-12-13T14:46:25.154937Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# initial derivative parameters\n",
-    "S = 101.15          #stock price\n",
-    "K = 98.01           #strike price\n",
-    "vol = 0.0991        #volatility (%)\n",
-    "r = 0.015            #risk-free rate (%)\n",
-    "N = 10              #number of time steps\n",
-    "M = 1000            #number of simulations\n",
+    "import numpy as np\n",
     "\n",
-    "market_value = 3.86 #market price of option\n",
-    "T = ((datetime.date(2022,3,17)-datetime.date(2022,1,17)).days+1)/365    #time in years\n",
-    "print(T)\n",
+    "# Option Parameters\n",
+    "initial_stock_price = 101.15    # Current stock price (S)\n",
+    "strike_price = 98.01            # Strike price (K)\n",
+    "volatility = 0.0991             # Volatility (σ)\n",
+    "risk_free_rate = 0.015          # Risk-free rate (r)\n",
+    "num_time_steps = 10             # Number of time steps (N)\n",
+    "num_simulations = 1000          # Number of Monte Carlo simulations (M)\n",
+    "time_to_maturity = 60 / 365     # Time to maturity in years (T)\n",
     "\n",
-    "# Precompute constants\n",
-    "dt = T/N\n",
-    "nudt = (r - 0.5*vol**2)*dt\n",
-    "volsdt = vol*np.sqrt(dt)\n",
-    "lnS = np.log(S)\n",
+    "# Precompute Constants\n",
+    "time_step = time_to_maturity / num_time_steps       # Length of each time step (Δt)\n",
+    "drift = (risk_free_rate - 0.5 * volatility**2) * time_step  # Drift term (νΔt)\n",
+    "diffusion = volatility * np.sqrt(time_step)         # Diffusion term (σ√Δt)\n",
+    "log_initial_price = np.log(initial_stock_price)     # Logarithm of initial stock price (ln(S))\n",
     "\n",
-    "# Standard Error Placeholders\n",
-    "sum_CT = 0\n",
-    "sum_CT2 = 0\n",
+    "# Initialize Accumulators for Payoff and Variance\n",
+    "total_payoff = 0\n",
+    "total_payoff_squared = 0\n",
     "\n",
-    "# Monte Carlo Method\n",
-    "for i in range(M):\n",
-    "    lnSt1 = lnS\n",
-    "    lnSt2 = lnS\n",
-    "    for j in range(N):\n",
-    "        # Perfectly Negatively Correlated Assets\n",
-    "        epsilon = np.random.normal()\n",
-    "        lnSt1 = lnSt1 + nudt + volsdt*epsilon\n",
-    "        lnSt2 = lnSt2 + nudt - volsdt*epsilon\n",
+    "# Function to Simulate Two Antithetic Log-Price Paths\n",
+    "def simulate_antithetic_log_price_paths(log_price, drift, diffusion, num_steps):\n",
+    "    \"\"\"Simulates two antithetic log price paths using geometric Brownian motion.\"\"\"\n",
+    "    for _ in range(num_steps):\n",
+    "        random_shock = np.random.normal()\n",
+    "        log_price_path_1 = log_price + drift + diffusion * random_shock\n",
+    "        log_price_path_2 = log_price + drift - diffusion * random_shock\n",
+    "        log_price = log_price_path_1  # Update base price for the next step\n",
+    "    return log_price_path_1, log_price_path_2\n",
     "\n",
-    "    ST1 = np.exp(lnSt1)\n",
-    "    ST2 = np.exp(lnSt2)\n",
-    "    CT = 0.5 * ( max(0, ST1 - K) + max(0, ST2 - K) )\n",
-    "    sum_CT = sum_CT + CT\n",
-    "    sum_CT2 = sum_CT2 + CT*CT\n",
+    "# Monte Carlo Simulation with Antithetic Variates\n",
+    "for _ in range(num_simulations):\n",
+    "    # Simulate the final log prices of two antithetic paths\n",
+    "    final_log_price_1, final_log_price_2 = simulate_antithetic_log_price_paths(\n",
+    "        log_initial_price, drift, diffusion, num_time_steps\n",
+    "    )\n",
+    "    final_price_1 = np.exp(final_log_price_1)  # Convert log price to normal price\n",
+    "    final_price_2 = np.exp(final_log_price_2)\n",
     "\n",
-    "# Compute Expectation and SE\n",
-    "C0 = np.exp(-r*T)*sum_CT/M\n",
-    "sigma = np.sqrt( (sum_CT2 - sum_CT*sum_CT/M)*np.exp(-2*r*T) / (M-1) )\n",
-    "SE = sigma/np.sqrt(M)\n",
+    "    # Calculate the average payoff for the two paths\n",
+    "    payoff_1 = max(0, final_price_1 - strike_price)\n",
+    "    payoff_2 = max(0, final_price_2 - strike_price)\n",
+    "    average_payoff = 0.5 * (payoff_1 + payoff_2)\n",
     "\n",
-    "print(\"Call value is ${0} with SE +/- {1}\".format(np.round(C0,2),np.round(SE,2)))"
+    "    # Accumulate results for mean and variance calculations\n",
+    "    total_payoff += average_payoff\n",
+    "    total_payoff_squared += average_payoff**2\n",
+    "\n",
+    "# Compute Option Value and Standard Error\n",
+    "discount_factor = np.exp(-risk_free_rate * time_to_maturity)\n",
+    "option_value = discount_factor * total_payoff / num_simulations  # Present value of expected payoff\n",
+    "variance = (total_payoff_squared - (total_payoff**2) / num_simulations) * discount_factor**2 / (num_simulations - 1)\n",
+    "standard_error = np.sqrt(variance) / np.sqrt(num_simulations)\n",
+    "\n",
+    "# Display Results\n",
+    "print(f\"Call option value: ${option_value:.2f}\")\n",
+    "print(f\"Standard error: +/- ${standard_error:.2f}\")"
    ],
    "id": "fdedd3538c8e4be3",
    "outputs": [
@@ -332,12 +479,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1643835616438356\n",
-      "Call value is $3.79 with SE +/- 0.03\n"
+      "Call option value: $3.66\n",
+      "Standard error: +/- $0.10\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 15
   }
  ],
  "metadata": {
