add control variates

--- a/GMoney/MCMC.ipynb
+++ b/GMoney/MCMC.ipynb
@@ -296,15 +296,40 @@
     "\n",
     "$\\large S_{t+\\Delta t} = S_{t} \\exp( \\nu \\Delta t + \\sigma (z_{t+\\Delta t}- z_t) )$\n",
     "\n",
-    "Where $(z_{t+\\Delta t}- z_t) \\sim N(0,\\Delta t) \\sim \\sqrt{\\Delta t} N(0,1) \\sim \\sqrt{\\Delta t} \\epsilon_i$"
+    "Where $(z_{t+\\Delta t}- z_t) \\sim N(0,\\Delta t) \\sim \\sqrt{\\Delta t} N(0,1) \\sim \\sqrt{\\Delta t} \\epsilon_i$\n",
+    "\n",
+    "## General Control Variate Equation\n",
+    "\n",
+    "For J control variates we have:\n",
+    "\n",
+    "$ \\Large C_0\\exp(rT) = C_T - \\sum^J_{i=j}\\beta_j cv_j + \\eta$\n",
+    "\n",
+    "where\n",
+    "- $\\beta_j$ are factors to account for the \"true\" linear relationship between the option pay-off and the control variate $cv_j$\n",
+    "- $\\eta$ accounts for errors:\n",
+    "    - discrete rebalancing\n",
+    "    - approximations in hedge sensitivities (calc. delta / gamma)\n",
+    "    \n",
+    "    \n",
+    "Option price as the sum of the linear relationships with J control variates\n",
+    "    \n",
+    "$ \\large C_T =\\beta_0 + \\sum^J_{i=j}\\beta_j cv_j + \\eta$\n",
+    "\n",
+    "where $\\beta_0 = C_0\\exp(rT)$ is the forward price of the option\n",
+    "\n",
+    "If we perform M simulations at discrete time intervals N we can regard the pay-offs and control variates as samples of the linear relationship with some noise. We can estimate the true relationship between control variates and option pay-offs with least-squares regression:\n",
+    "\n",
+    "$\\beta = (X'X)^{-1}X'Y$\n",
+    "\n",
+    "We don't want biased estimates of $\\beta_j$ so these should be precomputed by least-squares regression to establish the relationship between types of control variates and options first. These estaimates of $\\beta_j$ values can then be used for $cv_j$ for pricing any option.  "
    ],
    "id": "4eae2f3b78e5df7a"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T14:46:13.524725Z",
-     "start_time": "2024-12-13T14:46:13.490483Z"
+     "end_time": "2024-12-13T14:50:30.441058Z",
+     "start_time": "2024-12-13T14:50:30.382211Z"
     }
    },
    "cell_type": "code",
@@ -351,7 +376,6 @@
     "    total_payoff += payoff\n",
     "    total_payoff_squared += payoff**2\n",
     "\n",
-    "# Compute Option Value and Standard Error\n",
     "discount_factor = np.exp(-risk_free_rate * time_to_maturity)\n",
     "option_value = discount_factor * total_payoff / num_simulations  # Present value of expected payoff\n",
     "variance = (total_payoff_squared - (total_payoff**2) / num_simulations) * discount_factor**2 / (num_simulations - 1)\n",
@@ -367,12 +391,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Call option value: $4.16\n",
+      "Call option value: $3.98\n",
       "Standard error: +/- $0.11\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -442,12 +466,10 @@
     "        random_shock = np.random.normal()\n",
     "        log_price_path_1 = log_price + drift + diffusion * random_shock\n",
     "        log_price_path_2 = log_price + drift - diffusion * random_shock\n",
-    "        log_price = log_price_path_1  # Update base price for the next step\n",
     "    return log_price_path_1, log_price_path_2\n",
     "\n",
     "# Monte Carlo Simulation with Antithetic Variates\n",
     "for _ in range(num_simulations):\n",
-    "    # Simulate the final log prices of two antithetic paths\n",
     "    final_log_price_1, final_log_price_2 = simulate_antithetic_log_price_paths(\n",
     "        log_initial_price, drift, diffusion, num_time_steps\n",
     "    )\n",
@@ -463,7 +485,6 @@
     "    total_payoff += average_payoff\n",
     "    total_payoff_squared += average_payoff**2\n",
     "\n",
-    "# Compute Option Value and Standard Error\n",
     "discount_factor = np.exp(-risk_free_rate * time_to_maturity)\n",
     "option_value = discount_factor * total_payoff / num_simulations  # Present value of expected payoff\n",
     "variance = (total_payoff_squared - (total_payoff**2) / num_simulations) * discount_factor**2 / (num_simulations - 1)\n",
@@ -485,6 +506,160 @@
     }
    ],
    "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Control Variates & Hedging\n",
+    "\n",
+    "The probability distribution of an option pay-off after delta hedging has a smaller standard deviation compared to its portfolio's unhedged counterpart. We have shown this in a previous video, link above. Let's consider the dynamics of a discretely rebalanced delta hedge:\n",
+    "\n",
+    "$\\large C_{t_0}\\exp{rT} - [\\sum^{N}_{i=0} ( \\frac{\\delta C_{t_i}}{\\delta S} - \\frac{\\delta C_{t_{i-1}}}{\\delta S} ) S_t\\exp{r(T-t_i)}] = C_T + \\eta$\n",
+    "\n",
+    "The first term is the forward value of the premium recieved for writing the option, the second term represents the cash flows from rebalancing the headge at each time $t$, and the third term is the pay-off of the option and the hedging error $\\eta$.\n",
+    "\n",
+    "Now if we expand the terms in the square brackets:\n",
+    "\n",
+    "$\\frac{\\delta C_{t_0}}{\\delta S}S_{t_0}\\exp{r(T-t_0)} + \\frac{\\delta C_{t_1}}{\\delta S}S_{t_0}\\exp{r(T-t_1)} + ... + \\frac{\\delta C_{t_{N-1}}}{\\delta S}S_{t_{N-1}}\\exp{r(T-t_{N-1})} + \\frac{\\delta C_N}{\\delta S}S_{t_N}$\n",
+    "\n",
+    "$-\\frac{\\delta C_{t_0}}{\\delta S}S_{t_1}\\exp{r(T-t_1)} - \\frac{\\delta C_{t_1}}{\\delta S}S_{t_2}\\exp{r(T-t_2)} - ... - \\frac{\\delta C_{t_{N-1}}}{\\delta S}S_N$\n",
+    "\n",
+    "Group terms with $\\frac{\\delta C_{t_i}}{\\delta S}$ at the same time steps.\n",
+    "\n",
+    "$-\\frac{\\delta C_{t_0}}{\\delta S}(S_{t_1}-S_{t_0}\\exp{r\\Delta t})\\exp{r(T-t_1)} - \\frac{\\delta C_{t_1}}{\\delta S}(S_{t_2}-S_{t_1}\\exp{r\\Delta t})\\exp{r(T-t_2)} - ... - \\frac{\\delta C_{t_{N-1}}}{\\delta S}(S_{t_N}-S_{t_{N-1}}\\exp{r\\Delta t}) + \\frac{\\delta C_N}{\\delta S}S_{t_N}$\n",
+    "\n",
+    "If we assume the last term equals 0, which is equivalent to not buying the final delta amount of the asset, but simpluing liquidating the underlying holdings from the previous rebalancing date into cash, then the portfolio becomes:\n",
+    "\n",
+    "$\\large C_{t_0}\\exp{rT} = C_T - [\\sum^{N-1}_{i=0} \\frac{\\delta C_{t_i}}{\\Delta S}(S_{t_{i+1}} - S_{t_i}\\exp{r\\delta t})\\exp{r(T-t_{i+1})} ] + \\eta$\n",
+    "\n",
+    "The term in the square brackets (the delta hedge) is a delta-based martingale control variate ($cv_1$). This can be written as:\n",
+    "\n",
+    "$\\large cv_1 = \\sum^{N-1}_{i=0} \\frac{\\delta C_{t_i}}{\\delta S}(S_{t_{i+1}} - {\\mathbb E}[S_{t_i}])\\exp{r(T-t_{i+1})}$\n",
+    "\n",
+    "$\\large C_{t_0}\\exp{rT} = C_T - cv_1 + \\eta$"
+   ],
+   "id": "90f66b01f46e61f4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## General Control Variate Equation\n",
+    "\n",
+    "For J control variates we have:\n",
+    "\n",
+    "$ \\Large C_0\\exp(rT) = C_T - \\sum^J_{i=j}\\beta_j cv_j + \\eta$\n",
+    "\n",
+    "where\n",
+    "- $\\beta_j$ are factors to account for the \"true\" linear relationship between the option pay-off and the control variate $cv_j$\n",
+    "- $\\eta$ accounts for errors:\n",
+    "    - discrete rebalancing\n",
+    "    - approximations in hedge sensitivities (calc. delta / gamma)\n",
+    "\n",
+    "\n",
+    "Option price as the sum of the linear relationships with J control variates\n",
+    "\n",
+    "$ \\large C_T =\\beta_0 + \\sum^J_{i=j}\\beta_j cv_j + \\eta$\n",
+    "\n",
+    "where $\\beta_0 = C_0\\exp(rT)$ is the forward price of the option\n",
+    "\n",
+    "If we perform M simulations at discrete time intervals N we can regard the pay-offs and control variates as samples of the linear relationship with some noise. We can estimate the true relationship between control variates and option pay-offs with least-squares regression:\n",
+    "\n",
+    "$\\beta = (X'X)^{-1}X'Y$\n",
+    "\n",
+    "We don't want biased estimates of $\\beta_j$ so these should be precomputed by least-squares regression to establish the relationship between types of control variates and options first. These estaimates of $\\beta_j$ values can then be used for $cv_j$ for pricing any option.  "
+   ],
+   "id": "549c6a9bdb113b4a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T15:00:56.174477Z",
+     "start_time": "2024-12-13T15:00:55.786823Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "import datetime\n",
+    "\n",
+    "# Option Parameters\n",
+    "initial_stock_price = 101.15    # Current stock price (S)\n",
+    "strike_price = 98.01            # Strike price (K)\n",
+    "volatility = 0.0991             # Volatility (σ)\n",
+    "risk_free_rate = 0.015          # Risk-free rate (r)\n",
+    "num_time_steps = 10             # Number of time steps (N)\n",
+    "num_simulations = 1000          # Number of Monte Carlo simulations (M)\n",
+    "market_value = 3.86             # Market price of the option\n",
+    "time_to_maturity = ((datetime.date(2022, 3, 17) - datetime.date(2022, 1, 17)).days + 1) / 365  # Time in years\n",
+    "\n",
+    "print(f\"Time to maturity: {time_to_maturity:.3f} years\")\n",
+    "\n",
+    "# Precompute Constants\n",
+    "time_step = time_to_maturity / num_time_steps          # Length of each time step (Δt)\n",
+    "drift = (risk_free_rate - 0.5 * volatility**2) * time_step  # Drift term (νΔt)\n",
+    "diffusion = volatility * np.sqrt(time_step)            # Diffusion term (σ√Δt)\n",
+    "growth_factor = np.exp(risk_free_rate * time_step)     # Exponential growth factor\n",
+    "beta = -1                                              # Beta coefficient for control variate adjustment\n",
+    "\n",
+    "# Initialize Accumulators for Payoff and Variance\n",
+    "total_option_value = 0\n",
+    "total_option_value_squared = 0\n",
+    "\n",
+    "# Define delta function (control variate calculation)\n",
+    "def delta(option_type, stock_price, strike_price, time_to_expiry, risk_free_rate, volatility):\n",
+    "    \"\"\"Calculates the delta of a European option using Black-Scholes formula.\"\"\"\n",
+    "    from scipy.stats import norm\n",
+    "    d1 = (np.log(stock_price / strike_price) +\n",
+    "          (risk_free_rate + 0.5 * volatility**2) * time_to_expiry) / (volatility * np.sqrt(time_to_expiry))\n",
+    "    if option_type == 'c':  # Call option\n",
+    "        return norm.cdf(d1)\n",
+    "    elif option_type == 'p':  # Put option\n",
+    "        return norm.cdf(d1) - 1\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid option type. Use 'c' for call or 'p' for put.\")\n",
+    "\n",
+    "# Monte Carlo Simulation with Control Variate\n",
+    "for _ in range(num_simulations):\n",
+    "    stock_price = initial_stock_price\n",
+    "    control_variate = 0\n",
+    "    for step in range(num_time_steps):\n",
+    "        random_shock = np.random.normal()\n",
+    "        delta_value = delta('c', stock_price, strike_price, time_to_maturity - step * time_step,\n",
+    "                            risk_free_rate, volatility)\n",
+    "        next_stock_price = stock_price * np.exp(drift + diffusion * random_shock)\n",
+    "        control_variate += delta_value * (next_stock_price - stock_price * growth_factor)\n",
+    "        stock_price = next_stock_price\n",
+    "\n",
+    "    # Option payoff with control variate adjustment\n",
+    "    option_payoff = max(0, stock_price - strike_price) + beta * control_variate\n",
+    "    total_option_value += option_payoff\n",
+    "    total_option_value_squared += option_payoff**2\n",
+    "\n",
+    "# Compute Option Value and Standard Error\n",
+    "discount_factor = np.exp(-risk_free_rate * time_to_maturity)\n",
+    "option_price = discount_factor * total_option_value / num_simulations  # Present value of expected payoff\n",
+    "variance = (total_option_value_squared - (total_option_value**2) / num_simulations) * discount_factor**2 / (num_simulations - 1)\n",
+    "standard_error = np.sqrt(variance) / np.sqrt(num_simulations)\n",
+    "\n",
+    "# Display Results\n",
+    "print(f\"Call option value: ${option_price:.2f}\")\n",
+    "print(f\"Standard error: +/- ${standard_error:.3f}\")"
+   ],
+   "id": "611cfc062d9370e7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to maturity: 0.164 years\n",
+      "Call option value: $3.82\n",
+      "Standard error: +/- $0.010\n"
+     ]
+    }
+   ],
+   "execution_count": 19
   }
  ],
  "metadata": {
